# tailor-distro

./: .gitignore  Jenkinsfile  README.md  index.yaml  setup.cfg  setup.py  techstack.md  techstack.yml
debian_packager/: __init__.py  debian_packager.py
doc/buildfarm/: buildfarm.md
doc/imaging/: imaging.md
doc/packaging/: packaging.md
environment/: Dockerfile  aptly.conf
rosdep/: locus.yaml
rosdep/sources.list.d/: 20-default.list
rosdistro/: distribution.yaml  flavours.yaml  index.yaml  recipes.yaml  ros1.yaml  ros2.yaml  targets.yaml
rosdistro/hotdog/: distribution.yaml  doc-build.yaml  release-build.yaml  source-build.yaml
rosdistro/rosdep/: locus.yaml
rosdistro/rosdep/sources.list.d/: 20-default.list
scripts/: pull
src/tailor_distro/: generate_bundle_templates.py  publish_packages.py  pull_distro_repositories.py
src/tailor_distro/debian_templates/: rules
tailor_distro/: __init__.py  apt_tools.py  blossom.py  build_bundles.py  build_debians.py  build_packages.py  create_recipes.py  generate_bundle_templates.py  generate_graphs.py  get_build_list.py  get_dependency_list.py  manage.py  mirror_upstream.py  publish_packages.py  pull_distro.py  pull_distro_repositories.py  push_packages.py  recipes.py
tailor_distro/bundle_templates/: Dockerfile
tailor_distro/bundle_templates/debian/: changelog  control  rules
tailor_distro/debian_templates/: Dockerfile  Dockerfile.j2  build.j2  changelog.j2  control.j2  env.sh  rules  rules.j2
tailor_distro/debian_templates/compat_catkin_tools/: _setup_util.py.j2  env.sh.j2
tailor_distro/debian_templates/debian/: changelog  control  rules
tailor_distro/debian_templates/scripts/: env.sh.j2  install_connext.exp.j2
tailor_distro/manage/: __init__.py  base.py  compare.py  import_.py  manage.py  pin.py  query.py  query_release.py  release.py  rosdistro_repo.py
tailor_distro/templates/debian/: changelog  control
tailor_distro/templates/debian/source/: format
tests/: test_publish_packages.py
