[metadata]
name = tailor-distro
version = attr: tailor_distro.__version__
url = http://tailor.locusbots.io
project_urls =
    GitHub = https://github.com/locusrobotics/tailor-distro
author = Paul Bovbel
author_email = pbovbel@locusrobotics.com
maintainer = Paul Bovbel
maintainer_email = pbovbel@locusrobotics.com
license = Proprietary
description = Build bundles of ROS distributions.
long_description = file: README.md

[options]
python_requires = >=3.6
install_requires =
    bloom ==0.8.0
    catkin_pkg ==0.4.23
    Click ==7.0
    Jinja2 ==2.10.1
    gitpython ==2.1.15
    PyGithub ==1.43.8
    PyYaml ==3.13
    rosdistro ==0.7.5
packages = find:
setup_requires =
    pytest-runner ==5.1
tests_require =
    pytest ==5.1.3
    pytest-mypy ==0.4.1
    pytest-flake8 ==1.0.4

[options.entry_points]
console_scripts =
    create_recipes = tailor_distro.create_recipes:main
    pull_distro_repositories = tailor_distro.pull_distro_repositories:main
    mirror_upstream = tailor_distro.mirror_upstream:main
    generate_bundle_templates = tailor_distro.generate_bundle_templates:main
    publish_packages = tailor_distro.publish_packages:main
    tailor_manage = tailor_distro.manage:main

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose --junitxml=test-results.xml --mypy --flake8
pep8maxlinelength = 120

[flake8]
max-line-length = 120
