[metadata]
name = tailor-distro
version = attr: tailor_distro.__version__
url = http://tailor.locusbots.io
project_urls =
    GitHub = https://github.com/locusrobotics/tailor-distro
author = Paul Bovbel
author_email = pbovbel@locusrobotics.com
maintainer = Paul Bovbel
maintainer_email = pbovbel@locusrobotics.com
license = Proprietary
description = Build bundles of ROS distributions.
long_description = file: README.md

[options]
python_requires = >=3.10
install_requires =
    bloom ==0.13.0
    catkin_pkg ==1.0.0
    Click ==8.2.1
    Jinja2 ==3.1.6
    gitpython ==3.1.45
    PyGithub ==2.8.1
    PyYaml ==6.0.2
    rosdistro ==1.0.1
    rosdep ==0.26.0
packages = find:
setup_requires =
    pytest-runner ==6.0.1
tests_require =
    pytest ==8.4.1
    pytest-mypy ==1.0.1
    pytest-flake8 ==1.3.0

[options.entry_points]
console_scripts =
    create_recipes = tailor_distro.create_recipes:main
    pull_distro_repositories = tailor_distro.pull_distro_repositories:main
    mirror_upstream = tailor_distro.mirror_upstream:main
    generate_bundle_templates = tailor_distro.generate_bundle_templates:main
    publish_packages = tailor_distro.publish_packages:main
    tailor_manage = tailor_distro.manage:main
    build_debians = tailor_distro.build_debians:main

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose --junitxml=test-results.xml --mypy --flake8
pep8maxlinelength = 120

[flake8]
max-line-length = 120
